fix(home): correct section spacing to design values

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -73,7 +73,7 @@
 }
 
 .surveys {
-  padding-top: 108px;
+  padding-top: 90px;
 }
 
 .surveys__title {
@@ -103,5 +103,5 @@
 .highlights__row {
   display: flex;
   justify-content: space-between;
-  padding-top: 24px;
+  padding-top: 32px;
 }
